@@ -230,7 +230,6 @@ static int default_emacs_like_info_keys[] =
   KEYMAP_META('r'), NUL,                 A_info_move_to_window_line,
   KEYMAP_META('v'), NUL,                 A_info_scroll_backward_page_only,
   KEYMAP_META('x'), NUL,                 A_info_execute_command,
-  ESC, 'x', NUL,                         A_info_execute_command,
 
   CONTROL('x'), CONTROL('b'), NUL,        A_list_visited_nodes,
   CONTROL('x'), CONTROL('c'), NUL,        A_info_quit,
@@ -253,12 +252,13 @@ static int default_emacs_like_info_keys[] =
   KEY_LEFT_ARROW, NUL,          A_info_backward_char,
   KEY_DELETE, NUL,                A_info_scroll_backward,
   
-  ESC, KEY_PAGE_UP, NUL,        A_info_scroll_other_window_backward,
-  ESC, KEY_PAGE_DOWN, NUL,      A_info_scroll_other_window,
-  ESC, KEY_UP_ARROW, NUL,       A_info_prev_line,
-  ESC, KEY_DOWN_ARROW, NUL,     A_info_next_line,
-  ESC, KEY_RIGHT_ARROW, NUL,    A_info_forward_word,
-  ESC, KEY_LEFT_ARROW, NUL,     A_info_backward_word,
+  /* These must be accessed as ESC PgUp, etc. */
+  KEYMAP_META(KEY_PAGE_UP), NUL,        A_info_scroll_other_window_backward,
+  KEYMAP_META(KEY_PAGE_DOWN), NUL,      A_info_scroll_other_window,
+  KEYMAP_META(KEY_UP_ARROW), NUL,       A_info_prev_line,
+  KEYMAP_META(KEY_DOWN_ARROW), NUL,     A_info_next_line,
+  KEYMAP_META(KEY_RIGHT_ARROW), NUL,    A_info_forward_word,
+  KEYMAP_META(KEY_LEFT_ARROW), NUL,     A_info_backward_word,
   KEY_BACK_TAB, NUL,            A_info_move_to_prev_xref,
   
 };
@@ -419,31 +419,30 @@ static int default_vi_like_info_keys[] =
   'w', NUL,                       A_info_scroll_backward_page_only_set_window,
   'y', NUL,                       A_info_up_line,
   'z', NUL,                       A_info_scroll_forward_page_only_set_window,
-  ESC, CONTROL('f'), NUL,         A_info_show_footnotes,
-  ESC, CONTROL('g'), NUL,         A_info_abort_key,
-  ESC, TAB, NUL,                  A_info_move_to_prev_xref,
-  ESC, SPC, NUL,                  A_info_scroll_forward_page_only,
-  ESC, CONTROL('v'), NUL,         A_info_scroll_other_window,
-  ESC, '<', NUL,                  A_info_beginning_of_node,
-  ESC, '>', NUL,                  A_info_end_of_node,
-  ESC, '/', NUL,                  A_info_search,
-  ESC, '?', NUL,                  A_info_search_backward,
-  ESC, 'b', NUL,                  A_info_beginning_of_node,
-  ESC, 'd', NUL,                  A_info_dir_node,
-  ESC, 'e', NUL,                  A_info_end_of_node,
-  ESC, 'f', NUL,                  A_info_xref_item,
-  ESC, 'g', NUL,                  A_info_select_reference_this_line,
-  ESC, 'h', NUL,                  A_info_get_info_help_node,
-  ESC, 'I', NUL,                  A_info_virtual_index,
-  ESC, 'm', NUL,                  A_info_menu_item,
-  ESC, 'n', NUL,                  A_info_search,
-  ESC, 'N', NUL,                  A_info_search_backward,
-  ESC, 'r', NUL,                  A_isearch_backward,
-  ESC, 's', NUL,                  A_isearch_forward,
-  ESC, 't', NUL,                  A_info_top_node,
-  ESC, 'v', NUL,                  A_info_scroll_backward_page_only,
-  ESC, 'x', NUL,                  A_info_execute_command,
-  KEYMAP_META('x'), NUL,                 A_info_execute_command,
+  KEYMAP_META(CONTROL('f')), NUL,         A_info_show_footnotes,
+  KEYMAP_META(CONTROL('g')), NUL,         A_info_abort_key,
+  KEYMAP_META(TAB), NUL,                  A_info_move_to_prev_xref,
+  KEYMAP_META(SPC), NUL,                  A_info_scroll_forward_page_only,
+  KEYMAP_META(CONTROL('v')), NUL,         A_info_scroll_other_window,
+  KEYMAP_META('<'), NUL,                  A_info_beginning_of_node,
+  KEYMAP_META('>'), NUL,                  A_info_end_of_node,
+  KEYMAP_META('/'), NUL,                  A_info_search,
+  KEYMAP_META('?'), NUL,                  A_info_search_backward,
+  KEYMAP_META('b'), NUL,                  A_info_beginning_of_node,
+  KEYMAP_META('d'), NUL,                  A_info_dir_node,
+  KEYMAP_META('e'), NUL,                  A_info_end_of_node,
+  KEYMAP_META('f'), NUL,                  A_info_xref_item,
+  KEYMAP_META('g'), NUL,                  A_info_select_reference_this_line,
+  KEYMAP_META('h'), NUL,                  A_info_get_info_help_node,
+  KEYMAP_META('I'), NUL,                  A_info_virtual_index,
+  KEYMAP_META('m'), NUL,                  A_info_menu_item,
+  KEYMAP_META('n'), NUL,                  A_info_search,
+  KEYMAP_META('N'), NUL,                  A_info_search_backward,
+  KEYMAP_META('r'), NUL,                  A_isearch_backward,
+  KEYMAP_META('s'), NUL,                  A_isearch_forward,
+  KEYMAP_META('t'), NUL,                  A_info_top_node,
+  KEYMAP_META('v'), NUL,                  A_info_scroll_backward_page_only,
+  KEYMAP_META('x'), NUL,                  A_info_execute_command,
   CONTROL('x'), CONTROL('b'), NUL,        A_list_visited_nodes,
   CONTROL('x'), CONTROL('c'), NUL,        A_info_quit,
   CONTROL('x'), CONTROL('f'), NUL,        A_info_view_file,
@@ -475,14 +474,14 @@ static int default_vi_like_info_keys[] =
   KEY_LEFT_ARROW, NUL,          A_info_scroll_backward_page_only,
   KEY_HOME, NUL,                A_info_beginning_of_node,
   KEY_END, NUL,                 A_info_end_of_node,
-  ESC, KEY_PAGE_DOWN, NUL,      A_info_scroll_other_window,
-  ESC, KEY_PAGE_UP, NUL,        A_info_scroll_other_window_backward,
-  ESC, KEY_DELETE, NUL,         A_info_scroll_other_window_backward,
-  ESC, KEY_UP_ARROW, NUL,       A_info_prev_node,
-  ESC, KEY_DOWN_ARROW, NUL,     A_info_next_node,
-  ESC, KEY_RIGHT_ARROW, NUL,    A_info_xref_item,
-  ESC, KEY_LEFT_ARROW, NUL,     A_info_beginning_of_node,
-  CONTROL('x'), KEY_DELETE, NUL,A_ea_backward_kill_line,
+  KEYMAP_META(KEY_PAGE_DOWN), NUL,      A_info_scroll_other_window,
+  KEYMAP_META(KEY_PAGE_UP), NUL,        A_info_scroll_other_window_backward,
+  KEYMAP_META(KEY_DELETE), NUL,         A_info_scroll_other_window_backward,
+  KEYMAP_META(KEY_UP_ARROW), NUL,       A_info_prev_node,
+  KEYMAP_META(KEY_DOWN_ARROW), NUL,     A_info_next_node,
+  KEYMAP_META(KEY_RIGHT_ARROW), NUL,    A_info_xref_item,
+  KEYMAP_META(KEY_LEFT_ARROW), NUL,     A_info_beginning_of_node,
+  CONTROL('x'), KEY_DELETE, NUL, A_ea_backward_kill_line,
   
 };
 
